--- a/Resources/views/User/Post/Partial/item_post_head.html.twig
+++ b/Resources/views/User/Post/Partial/item_post_head.html.twig
@@ -30,7 +30,7 @@
 	            </div>
 	        {% endif %}
 
-            {%- if is_granted('ROLE_USER') and post.id and (is_granted('ROLE_MODERATOR') or not post.isDeleted) -%}
+            {%- if is_granted(roleUser()) and post.id and (is_granted(roleModerator()) or not post.isDeleted) -%}
 				&nbsp;
                 <div class="dropdown btn-group text-left">
                     <a class="dropdown-toggle btn btn-xs btn-icon-only" data-toggle="dropdown" href="#">
