--- a/Resources/views/User/Board/show.html.twig
+++ b/Resources/views/User/Board/show.html.twig
@@ -66,7 +66,7 @@
 					</tr>
 
 		            {%- for row, topic in sticky_topics -%}
-		                {%- if not topic.isDeleted or is_granted('ROLE_MODERATOR') -%}
+		                {%- if not topic.isDeleted or is_granted(roleModerator()) -%}
 		                    {%- include 'CCDNForumForumBundle:User:Board/Partial/item_topic_list.html.twig' -%}
 		                {%- endif -%}
 		            {%- endfor -%}
@@ -79,7 +79,7 @@
 			    {%- endif -%}
 
 		        {%- for row, topic in pager.getItems() -%}
-		            {%- if not topic.isDeleted or is_granted('ROLE_MODERATOR') -%}
+		            {%- if not topic.isDeleted or is_granted(roleModerator()) -%}
 		                {%- include 'CCDNForumForumBundle:User:Board/Partial/item_topic_list.html.twig' -%}
 		            {%- endif -%}
 		        {%- else -%}
