--- a/Resources/views/User/Topic/Partial/topic_actions.html.twig
+++ b/Resources/views/User/Topic/Partial/topic_actions.html.twig
@@ -37,7 +37,7 @@
 		{%- endif -%}
 
 
-		{%- if is_granted('ROLE_MODERATOR') -%}
+		{%- if is_granted(roleModerator()) -%}
 			<div class="btn-group">
 				<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#">
 					<i class="glyphicon glyphicon-wrench"></i>
